# XJTU-RMV-Task04

./: README.md  main.cpp
MVS_SDK_ROS2/SDK_ROS2/: CMakeLists.txt  package.xml
MVS_SDK_ROS2/SDK_ROS2/launch/: camera.launch.py
MVS_SDK_ROS2/SDK_ROS2/rviz/: rviz2_config.rviz
MVS_SDK_ROS2/SDK_ROS2/src/: sdk_ros2_node.cpp
test/: CMakeLists.txt
